--- a/src/Eccube/Resource/template/admin/Content/news_edit.twig
+++ b/src/Eccube/Resource/template/admin/Content/news_edit.twig
@@ -55,17 +55,17 @@ $(function() {
 
 {% block main %}
     <div class="row" id="aside_wrap">
-        <div class="col-md-9">
-            <div class="box">
-                <div class="box-header">
+        <div id="news_edit" class="col-md-9">
+            <div id="news_edit_box" class="box">
+                <div id="news_edit_box__header" class="box-header">
                     <h3 class="box-title">新着情報登録・編集</h3>
                 </div><!-- /.box-header -->
                 <form role="form" class="form-horizontal" name="form1" id="form1" method="post" action="?">
-                    <div class="box-body">
+                    <div id="news_edit_box__body" class="box-body">
 
                         {{ form_row(form._token) }}
 
-                        <div class="form-group">
+                        <div id="news_edit_box__admin_news_date" class="form-group">
                             {{ form_label(form.date) }}
                             <div class="col-sm-10">
                                 {{ form_widget(form.date, {'attr': {'class': 'input_cal'}}) }}
@@ -87,8 +87,8 @@ $(function() {
                 </form>
             </div><!-- /.box -->
 
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
+            <div id="news_edit_footer" class="row">
+                <div id="news_edit_footer__button_area" class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
                     <p><a href="{{ url('admin_content_news') }}">戻る</a></p>
                 </div>
             </div>
@@ -97,11 +97,11 @@ $(function() {
 
         <div class="col-md-3">
             <div class="col_inner" id="aside_column">
-                <div class="box no-header">
-                    <div class="box-body">
-                        <div class="row text-center">
+                <div id="button_box" class="box no-header">
+                    <div id="button_box__body" class="box-body">
+                        <div id="button_box__button_area" class="row text-center">
                             <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                <button class="btn btn-primary btn-block btn-lg" onclick="document.form1.submit();">登録</button>
+                                <button id="button_box__insert_button" class="btn btn-primary btn-block btn-lg" onclick="document.form1.submit();">登録</button>
                             </div>
                         </div>
                     </div><!-- /.box-body -->
